# camara_deputado_v2

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.astro/: config.yaml
include/: extract.py
